CHANGES IN VERSION 2.0.15
-------------------------
    o Bug fix with gisticChromPlot. Issue #365
    o Bug fix with plot alignment. Issue #360
    o Update description for lollipopPlot with domain source. Issue #354
    o Optimized method for rank estimation in signature analysis
    o Add barcode_mar and gene_mar to oncoplot and gisticOncoPlot. Issue: #346
    o Add sepwd_genes, sepwd_samples to oncoplot and gisticOncoPlot. Issue: #340 #260
    o Avoid plotting legend outside the margin. Issue: #337
    o Add argument for sample ordering in PlotOncogenicPathways. Issue: #332
    o Add cohortSize argument to oncoplot. Issue: #324
    o coOncoPlot: showing sample names has no effect. Issue: #306

CHANGES IN VERSION 2.0.10
-------------------------
    o Add argument for sample ordering in plotTiTv. Issue: #330
    o Bug fix in annovartomaf which caused wrong annotations for INDLS. Issue: #330

CHANGES IN VERSION 2.0.05
-------------------------
USER-LEVEL IMPROVEMENT
    o merge_mafs - Merge multiple MAF objects, files. Issue: #329
    o Add more examples for oncoplot customization. Issue: #310
    o CoOncoplot - align gene names. Issue: #308
    o Added keepGeneOrder argument to plotVaf. Issue: #305
    o Added sampleOrder argument to gisticOncoPlot. Issue: #302

BUG FIX
    o Fix oncoplot removeNonMutated Error #325
    o SomatinInteractions - Do not ignore samples with no nonsyn variants. Issue: #318
    o Do not convert spaces to underscores while parsing annotations. Issue: #314
    o Fix errors in bubbleplot when the data contains no labels. Issue: #313
    o Fix data.table melt value name in plotVaf. Issue: #311
    o Fix colors for NAs in oncoplot legend. Issue: #309

CHANGES IN VERSION 2.0.0
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Oncoplot, oncostrip and coOncoplot code has been migrated from ComplexHeatmap to base graphics. Default values for some arguments have been changed.